# test-django-poetry

./: pyproject.toml
config/: settings.py
