[tool.poetry]
name = "django-test-poerry"
version = "0.1.0"
description = ""
authors = ["di-m-dy <dimdy11.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
